# whoami-rs

./: Cargo.toml
src/: main.rs
