[package]
name = "whoami-rs"
version = "0.1.0-alpha.0"
edition = "2024"
license = "Apache-2.0"
description = "Webserver in Rust for deployment verification: host info, health checks, echo server behavior."
homepage = "https://github.com/inflite-dev/whoami-rs"
repository = "https://github.com/inflite-dev/whoami-rs"

readme = "README.md"

[dependencies]
axum = { features = ["http1", "http2", "macros", "tokio"], version = "0.8", default-features = false }
bytes = { version = "1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"], default-features = false }